#pragma once

#include <vector>
#include <memory>
#include <string>
#include <unordered_map>

namespace x64_vm {
namespace ai {

/**
 * @brief Code Analyzer Class
 * 
 * This class uses machine learning to analyze code execution patterns
 * and provide optimization suggestions.
 */
class CodeAnalyzer {
public:
    CodeAnalyzer();
    ~CodeAnalyzer();

    /**
     * @brief Analyzes a code block
     * @param code Code to analyze
     * @return Analysis results
     */
    struct AnalysisResult {
        std::vector<std::string> optimization_suggestions;
        std::unordered_map<std::string, double> performance_metrics;
        std::vector<std::string> potential_bottlenecks;
    };
    AnalysisResult analyze_code(const std::vector<uint8_t>& code);

    /**
     * @brief Loads training data
     * @param training_data Training data
     */
    void load_training_data(const std::vector<std::pair<std::vector<uint8_t>, AnalysisResult>>& training_data);

    /**
     * @brief Trains the model
     */
    void train_model();

    /**
     * @brief Makes predictions
     * @param code Code to predict
     * @return Prediction results
     */
    AnalysisResult predict(const std::vector<uint8_t>& code);

private:
    class Impl;
    std::unique_ptr<Impl> impl_;
};

} // namespace ai
} // namespace x64_vm 