#include "code_analyzer.hpp"
#include <tensorflow/c/c_api.h>
#include <tensorflow/core/framework/tensor.h>
#include <tensorflow/core/public/session.h>
#include <memory>
#include <vector>
#include <string>
#include <unordered_map>
#include <stdexcept>

namespace x64_vm {
namespace ai {

class CodeAnalyzer::Impl {
public:
    Impl() {
        // Initialize TensorFlow
        TF_Status* status = TF_NewStatus();
        TF_SessionOptions* options = TF_NewSessionOptions();
        session_ = TF_NewSession(options, status);
        TF_DeleteSessionOptions(options);

        if (TF_GetCode(status) != TF_OK) {
            TF_DeleteStatus(status);
            throw std::runtime_error("Failed to create TensorFlow session");
        }
        TF_DeleteStatus(status);

        // Load model
        load_model();
    }

    ~Impl() {
        if (session_) {
            TF_Status* status = TF_NewStatus();
            TF_CloseSession(session_, status);
            TF_DeleteSession(session_, status);
            TF_DeleteStatus(status);
        }
    }

    AnalysisResult analyze_code(const std::vector<uint8_t>& code) {
        // Convert code to tensor
        tensorflow::Tensor input_tensor(tensorflow::DT_UINT8, 
                                      tensorflow::TensorShape({1, static_cast<int64_t>(code.size())}));
        auto input_data = input_tensor.flat<uint8_t>().data();
        std::copy(code.begin(), code.end(), input_data);

        // Run inference
        std::vector<tensorflow::Tensor> outputs;
        tensorflow::Status status = session_->Run(
            {{"input", input_tensor}},
            {"optimization_suggestions", "performance_metrics", "bottlenecks"},
            {},
            &outputs
        );

        if (!status.ok()) {
            throw std::runtime_error("Failed to run inference: " + status.ToString());
        }

        // Process results
        AnalysisResult result;
        
        // Get optimization suggestions
        auto suggestions_tensor = outputs[0].flat<tensorflow::string>();
        for (int i = 0; i < suggestions_tensor.size(); ++i) {
            result.optimization_suggestions.push_back(suggestions_tensor(i));
        }

        // Get performance metrics
        auto metrics_tensor = outputs[1].flat<float>();
        result.performance_metrics["execution_time"] = metrics_tensor(0);
        result.performance_metrics["memory_usage"] = metrics_tensor(1);
        result.performance_metrics["cache_hits"] = metrics_tensor(2);

        // Get potential bottlenecks
        auto bottlenecks_tensor = outputs[2].flat<tensorflow::string>();
        for (int i = 0; i < bottlenecks_tensor.size(); ++i) {
            result.potential_bottlenecks.push_back(bottlenecks_tensor(i));
        }

        return result;
    }

    void load_training_data(const std::vector<std::pair<std::vector<uint8_t>, AnalysisResult>>& training_data) {
        training_data_ = training_data;
    }

    void train_model() {
        // Convert training data to tensors
        std::vector<tensorflow::Tensor> inputs;
        std::vector<tensorflow::Tensor> labels;

        for (const auto& [code, result] : training_data_) {
            // Input tensor
            tensorflow::Tensor input_tensor(tensorflow::DT_UINT8,
                                          tensorflow::TensorShape({1, static_cast<int64_t>(code.size())}));
            auto input_data = input_tensor.flat<uint8_t>().data();
            std::copy(code.begin(), code.end(), input_data);
            inputs.push_back(input_tensor);

            // Label tensor
            tensorflow::Tensor label_tensor(tensorflow::DT_FLOAT,
                                          tensorflow::TensorShape({1, 3}));
            auto label_data = label_tensor.flat<float>().data();
            label_data[0] = result.performance_metrics.at("execution_time");
            label_data[1] = result.performance_metrics.at("memory_usage");
            label_data[2] = result.performance_metrics.at("cache_hits");
            labels.push_back(label_tensor);
        }

        // Train model
        tensorflow::Status status = session_->Run(
            {{"input", inputs}, {"labels", labels}},
            {},
            {"train"},
            nullptr
        );

        if (!status.ok()) {
            throw std::runtime_error("Failed to train model: " + status.ToString());
        }
    }

    AnalysisResult predict(const std::vector<uint8_t>& code) {
        return analyze_code(code);
    }

private:
    void load_model() {
        // Load pre-trained model
        tensorflow::GraphDef graph_def;
        tensorflow::Status status = tensorflow::ReadBinaryProto(
            tensorflow::Env::Default(),
            "model.pb",
            &graph_def
        );

        if (!status.ok()) {
            throw std::runtime_error("Failed to load model: " + status.ToString());
        }

        status = session_->Create(graph_def);
        if (!status.ok()) {
            throw std::runtime_error("Failed to create graph: " + status.ToString());
        }
    }

    std::unique_ptr<tensorflow::Session> session_;
    std::vector<std::pair<std::vector<uint8_t>, AnalysisResult>> training_data_;
};

CodeAnalyzer::CodeAnalyzer() : impl_(std::make_unique<Impl>()) {}
CodeAnalyzer::~CodeAnalyzer() = default;

CodeAnalyzer::AnalysisResult CodeAnalyzer::analyze_code(const std::vector<uint8_t>& code) {
    return impl_->analyze_code(code);
}

void CodeAnalyzer::load_training_data(const std::vector<std::pair<std::vector<uint8_t>, AnalysisResult>>& training_data) {
    impl_->load_training_data(training_data);
}

void CodeAnalyzer::train_model() {
    impl_->train_model();
}

CodeAnalyzer::AnalysisResult CodeAnalyzer::predict(const std::vector<uint8_t>& code) {
    return impl_->predict(code);
}

} // namespace ai
} // namespace x64_vm 